examples/should_fail/irrelevant_cycle.anvil
proc irrelevant_cycle () {
    loop {
        let a = cycle 10;
        cycle 1
    }
}
